[tool:pytest]
addopts =
	--strict
	--flakes
	--pep8
    --cov-config cryptoyaml/.coveragerc
	--cov-report=term
	--cov-report=html
	--doctest-modules
	cryptoyaml
omit = cryptoyaml/testing.py
pep8ignore = E501 E128 E731

[flake8]
ignore = E128
max-line-length = 132

[aliases]
dev = develop easy_install pytest cryptoyaml[development]

[build_sphinx]
source-dir = docs/
build-dir = docs/htdocs
all_files = 1

[metadata]
license_file = LICENSE